--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,23 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "reactstrap": "^5.0.0",
+    "cross-env": "^5.1.1",
+    "webpack": "^4.41.0",
+    "react-hot-loader": "^3.1.3",
+    "react-transition-group": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
+    "bundle": "cross-env webpack --config ./webpack.config.js --progress --colors && cp index.html favicon.ico dist/public",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -27,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-router-dom": "^5.1.2",
+    "webpack-cli": "^3.3.9"
   }
 }
