--- a/server/pom.xml
+++ b/server/pom.xml
@@ -103,5 +103,11 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.3.1</version>
+        </dependency>
+
     </dependencies>
 </project>
