--- a/client/package.json
+++ b/client/package.json
@@ -15,11 +15,14 @@
     "cross-env": "^5.1.1",
     "webpack": "^4.41.0",
     "react-hot-loader": "^3.1.3",
-    "react-transition-group": "latest"
+    "react-transition-group": "latest",
+    "classnames": "latest",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "start": "react-scripts start",
-    "bundle": "cross-env webpack --config ./webpack.config.js --progress --colors && cp index.html favicon.ico dist/public",
+    "bundle": "cross-env webpack --config ./webpack.prod.config.js --progress --colors && cp index.html favicon.ico dist/public",
+    "dev": "cross-env webpack-dev-server --config ./webpack.dev.config.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,7 +43,12 @@
     ]
   },
   "devDependencies": {
+    "babel-jest": "^24.9.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-react": "^6.24.1",
+    "react-hot-loader": "^3.1.3",
     "react-router-dom": "^5.1.2",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.7.1"
   }
 }
